etc/encoding_profiles: remove deprecated usage of *-add

--- a/etc/encoding-profiles.conf
+++ b/etc/encoding-profiles.conf
@@ -83,7 +83,6 @@ ovcopts = preset=medium,crf=23,threads=0
 [enc-v-mpeg2]
 profile-desc = "MPEG-2 Video (FFmpeg)"
 ovc = mpeg2video
-ovcopts-clr = yes
 
 [enc-v-mpeg4]
 profile-desc = "MPEG-4 Part 2 (FFmpeg)"
@@ -146,31 +145,38 @@ profile-desc = "DVD-Video PAL, use dvdauthor -v pal -a ac3+en (MUST be used with
 profile = enc-v-mpeg2
 profile = enc-a-ac3
 of = dvd
-ofopts-add = packetsize=2048,muxrate=10080000
+ofopts-append = packetsize=2048
+ofopts-append = muxrate=10080000
 ofps = 25
 oharddup = yes
 ovfirst = yes # dvdauthor needs this
 audio-samplerate = 48000
-ovcopts-add = g=15,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
+ovcopts = g=15,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
 
 [enc-to-dvdntsc]
 profile-desc = "DVD-Video NTSC, use dvdauthor -v ntsc -a ac3+en (MUST be used with 4:3 or 16:9 aspect, and 720x480, 704x480, 352x480 or 352x240 resolution)"
 profile = enc-v-mpeg2
 profile = enc-a-ac3
 of = dvd
-ofopts-add = packetsize=2048,muxrate=10080000
+ofopts-append = packetsize=2048
+ofopts-append = muxrate=10080000
 ofps = 24000/1001
 oharddup = yes
 ovfirst = yes # dvdauthor needs this
 audio-samplerate = 48000
-ovcopts-add = g=18,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
+ovcopts = g=18,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
 
 [enc-to-nok-n900]
 profile-desc = "MP4 for Nokia N900"
 profile = enc-f-mp4
 # DW = 800, DH = 480, SAR = 1
 vf-add = lavfi=graph="scale=floor(min(min(800\,dar*480)\,in_w*max(1\,sar))/2+0.5)*2:floor(min(min(800/dar\,480)\,in_h*max(1/sar\,1))/2+0.5)*2,setsar=sar=1"
-ovcopts-add = profile=baseline,level=30,maxrate=10000k,bufsize=10000k,rc_init_occupancy=9000k,refs=5
+ovcopts-append = profile=baseline
+ovcopts-append = level=30
+ovcopts-append = maxrate=10000k
+ovcopts-append = bufsize=10000k
+ovcopts-append = rc_init_occupancy=9000k
+ovcopts-append = refs=5
 omaxfps = 30
 
 [enc-to-nok-6300]
