appveyor: use a clean %PATH%
AppVeyor build workers have Git for Windows on the %PATH%, which
includes some MSYS2 binaries. Having multiple MSYS2 installations on the
%PATH% causes cygheap errors, so remove them and make sure %PATH% only
has stuff we need.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ branches:
     - appveyor
 
 environment:
+  global:
+    PATH: C:\msys64\usr\bin;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem
   matrix:
     - MSYSTEM: MINGW64
     - MSYSTEM: MINGW32
