--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ script:
   - ./bootstrap.py
   - ./waf configure
   - ./waf build
+after_failure: cat ./build/config.log
 after_script: TOOLS/travis-rebuild-website
 
 notifications:
